--- a/room-screen.html
+++ b/room-screen.html
@@ -22,12 +22,13 @@
                     </div>
                 </div>
             </li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
 
     <body>
         <br /><br /><br /><br /><br /><br />
-        <form id="speakerInformation" method="POST">
+        <form id="roomInformation" method="POST">
             <table class="center">
                 <tr>
                     <th class="tabHeader" id="selected" ><a href="room-screen.html">Room</a></th>
@@ -37,7 +38,7 @@
                 </tr>
                 <tr>
                     <td colspan="4" style="width: 100%;">
-                        <table id="speakerInfoBody">
+                        <table id="infoBody">
                             <tr>
                                 <td colspan="4" style="text-align: center;">
                                     <label id="addOrEdit" style="font-weight: bold;"></label>
@@ -63,7 +64,7 @@
                                     <input type="text" name="roomCapacity" />
                                 </td>
                             </tr>
-                            <tr><td><br/> </td></tr>
+                            <tr><td></td></tr>
                             <tr id="addNewRoom">
                                 <td colspan="4" style="text-align: center;">
                                     <input type="submit" id="btnAdd" name="addRoom" value="Add" />
