--- a/session-screen.html
+++ b/session-screen.html
@@ -22,13 +22,14 @@
                     </div>
                 </div>
             </li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
 
 
     <body>
         <br /><br /><br /><br /><br /><br />
-        <form id="speakerInformation" method="POST">
+        <form id="sessionInformation" method="POST">
             <table class="center">
                 <tr>
                     <th class="tabHeader"><a href="room-screen.html">Room</a></th>
@@ -38,7 +39,7 @@
                 </tr>
                 <tr>
                     <td colspan="4" style="width: 100%;">
-                        <table id="speakerInfoBody">
+                        <table id="infoBody">
                             <tr>
                                 <td colspan="4" style="text-align: center;">
                                     <label id="addOrEdit" style="font-weight: bold;"></label>
