--- a/speaker-screen-xBottom.html
+++ b/speaker-screen-xBottom.html
@@ -41,14 +41,6 @@
                     <td colspan="4" style="width: 100%;">
                         <table id="infoBody">
                             <tr>
-                                <td colspan="4" style="width: 100%;">
-                                    <div style="float: right;">
-                                        <input type="button" Title="Exit" id="btnExit" name="exitSpeaker" value="x" style="border: none; background-color: transparent; color: black; margin: 0;" />
-                                    </div>
-                                    
-                                </td>
-                            </tr>
-                            <tr>
                                 <td colspan="4" style="text-align: center;">
                                     <label id="addOrEdit" style="font-weight: bold;"></label>
                                 </td>
@@ -118,6 +110,9 @@
                     </td>
                 </tr>
             </table>
+            <div style="position: absolute; bottom: 0;">
+                <input type="button" Title="Exit" id="btnExit" name="exitSpeaker" value="x" style="border: none; background-color: transparent; color: black; margin: 0;" />
+            </div>
         </form>
     </body>
     <script>
