--- a/timeslot-screen.html
+++ b/timeslot-screen.html
@@ -38,7 +38,7 @@
                 </tr>
                 <tr>
                     <td colspan="4" style="width: 100%;">
-                        <table id="speakerInfoBody">
+                        <table id="infoBody">
                             <tr>
                                 <td colspan="4" style="text-align: center;">
                                     <label id="addOrEdit" style="font-weight: bold;"></label>
