--- a/speaker-screen-clearMiddle.html
+++ b/speaker-screen-clearMiddle.html
@@ -100,15 +100,24 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td colspan="4" style="text-align: center;">
-                                    <input type="button" id="btnClear" name="clearSpeaker" value="Clear" style="margin-bottom: 10px;" />
-                                    
-                                </td>
+                                <td colspan="4"> <br /> </td>
                             </tr>
                             <tr>
                                 <td colspan="4">
-                                    <input type="button" id="btnDelete" name="deleteSpeaker" value="Delete" style="float: left; margin-left: 10px; margin-bottom: 10px;" />
-                                    <input type="button" Title="Exit" id="btnExit" name="exitSpeaker" value="Exit" style="float: right; margin-right: 10px; margin-bottom: 10px;" />
+                                    <table style="width: 100%;">
+                                        <tr>
+                                            <td style="width: 17.5%;">
+                                                <input type="button" id="btnDelete" name="deleteSpeaker" value="Delete" style="float: left; margin-left: 10px; margin-bottom: 10px;" />
+                                            </td>
+                                            <td style="text-align: center; width: 25%;">
+                                                <input type="button" id="btnClear" name="clearSpeaker" value="Clear" style="margin-bottom: 10px;" />
+                                            </td>
+                                            <td style="width: 17.5%;">
+                                                <input type="button" Title="Exit" id="btnExit" name="exitSpeaker" value="Exit" style="float: right; margin-right: 10px; margin-bottom: 10px;" />
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    
                                 </td>
                             </tr>
                         </table>
